--- a/Free_israel/gvarim_yozmim.html
+++ b/Free_israel/gvarim_yozmim.html
@@ -1,1 +1,87 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gvarim Yozmim</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+        header {
+            background-color: #4a90e2;
+            color: #ffffff;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+        .container {
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 15px 0;
+            position: relative;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Welcome to Gvarim Yozmim</h1>
+        <p>Where ideas and connections flourish</p>
+    </header>
+    <nav>
+        <a href="#about">About Us</a>
+        <a href="#events">Events</a>
+        <a href="#community">Community</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="container">
+        <section id="about">
+            <h2>About Gvarim Yozmim</h2>
+            <p>"Gvarim Yozmim" is a platform dedicated to fostering creativity, community, and collaboration among men. We host a range of events, workshops, and discussions to inspire and empower our members.</p>
+        </section>
+
+        <section id="events">
+            <h2>Upcoming Events</h2>
+            <p>Join us for engaging meetups, talks, and networking opportunities. Stay tuned for the latest events on our social media.</p>
+        </section>
+
+        <section id="community">
+            <h2>Our Community</h2>
+            <p>We believe in building a strong, supportive network where everyone can share ideas, find encouragement, and create meaningful relationships.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Feel free to reach out to us at <a href="mailto:info@gvarimyozmim.com">info@gvarimyozmim.com</a>.</p>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2024 Gvarim Yozmim. All rights reserved.</p>
+    </footer>
+</body>
+
+</html>
 
